# duvis

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  README.md  build.rs  justfile
.github/: renovate.json5
.github/scripts/perf-benchmark-history/: bench-run.mjs
.github/workflows/: cargo-publish.yml  ci.yml  perf-benchmark-history.yml
dev/bench/: data.js
npm/: README.md  package.json
prebuilt/: ui.html
src/: category.rs  classify.rs  cli.rs  entry.rs  filter.rs  lib.rs  main.rs  render.rs  scan.rs  scanner.rs  ui.rs  wire.rs
src/classify/: category.rs  rules.rs
src/cli/: app.rs  args.rs  exit.rs  help.rs  plan.rs  signals.rs
src/filter/: parse.rs  subtree.rs
src/output/: analyze.rs  filter.rs  json.rs  largest.rs  mod.rs  ndjson.rs  summary.rs  tree.rs
src/render/: format.rs  json.rs  largest.rs  ndjson.rs  summary.rs  toon.rs  tree.rs
src/scan/: counts.rs  hardlinks.rs  metadata.rs  walk.rs
src/ui/: assets.rs  reveal.rs  server.rs  state.rs
src/wire/: category.rs  entry.rs  explain.rs  largest.rs  tree.rs  ui.rs
tests/: cli.rs
tests/snapshots/: cli__analyze_default.snap  cli__tree_default.snap
ui/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/scripts/: copy-to-prebuilt.mjs  copy-to-rust.mjs
ui/src/: App.tsx  main.tsx  state.ts
ui/src/api/: reveal.ts  scan.ts
ui/src/components/: DetailPanel.css  DetailPanel.tsx  ErrorBoundary.tsx  Legend.css  Legend.tsx  ListView.tsx  ScanningView.css  Sidebar.tsx  StatsRow.css  StatsRow.tsx  Sunburst.tsx  Tooltip.tsx  Topbar.css  Topbar.tsx  Treemap.css  Treemap.tsx  ViewTabs.tsx
ui/src/data/: format.test.ts  hierarchy.test.ts  hierarchy.ts  search.test.ts  search.ts  treemapLayout.test.ts  treemapLayout.ts  types.ts
ui/src/hooks/: useDrillOutKey.ts  useScanPolling.ts
ui/src/lib/: categories.ts  data.ts  format.ts  treemap.ts  types.ts
ui/src/panels/: Legend.module.css  Legend.tsx  StatsRow.module.css  StatsRow.tsx  Tooltip.css  Tooltip.module.css  Tooltip.tsx
ui/src/panels/DetailPanel/: Breadcrumbs.tsx  DetailPanel.css  DetailPanel.module.css  DetailPanel.tsx  FileIcon.tsx  HintWrap.tsx  MetadataGrid.tsx  TopChildren.tsx  actions.tsx  helpers.ts  useCopyButton.ts
ui/src/shell/: ErrorBoundary.tsx  ResizeHandle.tsx  ScanningView.tsx  Sidebar.css  Sidebar.module.css  Sidebar.tsx  Topbar.module.css  Topbar.tsx
ui/src/state/: appState.ts  columnWidths.test.ts  columnWidths.ts  theme.ts
ui/src/styles/: globals.css  tokens.css
ui/src/views/: ListView.css  ListView.module.css  ListView.tsx  RadioControl.tsx  Sunburst.module.css  Sunburst.tsx  ViewTabs.css  ViewTabs.module.css  ViewTabs.tsx
ui/src/views/Treemap/: LeafCell.tsx  ParentFrame.tsx  Treemap.css  Treemap.module.css  Treemap.tsx  label.ts
