[package]
name = "duvis"
version = "0.1.0"
edition = "2021"
description = "Disk usage visualizer for both AI and humans"
repository = "https://github.com/yamadashy/duvis"
homepage = "https://github.com/yamadashy/duvis"
documentation = "https://docs.rs/duvis"
readme = "README.md"
license = "MIT"
authors = ["Kazuki Yamada <koukun0120@gmail.com>"]
keywords = ["disk-usage", "cli", "treemap", "visualizer", "ai"]
categories = ["command-line-utilities", "filesystem", "visualization"]
build = "build.rs"
# Explicit allow-list of files shipped to crates.io. `prebuilt/ui.html` is
# the pre-built browser UI; it's gitignored (regenerated each release via
# `just ui-build-prebuilt`) so cargo publish needs `--allow-dirty`, but it
# rides along in the published tarball so end users don't need Node.js.
# Patterns are gitignore-style; the leading "/" anchors them to the package
# root so we don't accidentally pick up matching files deep in ui/node_modules.
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/src/**/*.rs",
    "/prebuilt/ui.html",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
open = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
http-body-util = "0.1"
insta = { version = "1", features = ["filters"] }
predicates = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
