[package]
name = "duvis"
version = "0.1.6"
edition = "2021"
description = "Disk usage visualizer for both AI and humans"
repository = "https://github.com/yamadashy/duvis"
homepage = "https://github.com/yamadashy/duvis"
documentation = "https://docs.rs/duvis"
readme = "README.md"
license = "MIT"
authors = ["Kazuki Yamada <koukun0120@gmail.com>"]
keywords = ["disk-usage", "cli", "treemap", "visualizer", "ai"]
categories = ["command-line-utilities", "filesystem", "visualization"]
build = "build.rs"
# Explicit allow-list of files shipped to crates.io. `prebuilt/ui.html` is
# the pre-built browser UI; it's gitignored (regenerated each release via
# `just ui-build-prebuilt`) so cargo publish needs `--allow-dirty`, but it
# rides along in the published tarball so end users don't need Node.js.
# Patterns are gitignore-style; the leading "/" anchors them to the package
# root so we don't accidentally pick up matching files deep in ui/node_modules.
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/src/**/*.rs",
    "/prebuilt/ui.html",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
rayon = "1.12.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
open = "5.3.4"
# Compiled glob matchers for `--name` filters. `GlobSet` lets us test a
# filename against several patterns in one walk-step without rebuilding
# the matcher per entry.
globset = "0.4.18"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
assert_cmd = "2.2.1"
http-body-util = "0.1.3"
insta = { version = "1.47.2", features = ["filters"] }
predicates = "3.1.4"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
