[package]
name = "duvis"
version = "0.1.8"
edition = "2021"
description = "Disk usage visualizer for both AI and humans"
repository = "https://github.com/yamadashy/duvis"
homepage = "https://github.com/yamadashy/duvis"
documentation = "https://docs.rs/duvis"
readme = "README.md"
license = "MIT"
authors = ["Kazuki Yamada <koukun0120@gmail.com>"]
keywords = ["disk-usage", "cli", "treemap", "visualizer", "ai"]
categories = ["command-line-utilities", "filesystem", "visualization"]
build = "build.rs"
# Explicit allow-list of files shipped to crates.io. `prebuilt/ui.html` is
# the pre-built browser UI; it's gitignored (regenerated each release via
# `just ui-build-prebuilt`) so cargo publish needs `--allow-dirty`, but it
# rides along in the published tarball so end users don't need Node.js.
# Patterns are gitignore-style; the leading "/" anchors them to the package
# root so we don't accidentally pick up matching files deep in ui/node_modules.
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/build.rs",
    "/src/**/*.rs",
    "/prebuilt/ui.html",
]

[features]
# Default build ships the full binary with the browser UI server. End
# users (`cargo install duvis`) and crates.io publishes both get this.
default = ["ui"]
# Embedded HTTP server + browser UI (`--ui` flag, axum routes, bundled
# HTML). Turning this off lets downstream consumers (and any future
# `duvis-core`-style library usage) compile without pulling axum /
# tokio / open into the dependency graph. Trade-off: `--ui` and
# `--port` disappear from the CLI surface and clap rejects them as
# unknown arguments.
ui = ["dep:axum", "dep:tokio", "dep:open"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.103"
rayon = "1.12.0"
axum = { version = "0.8.9", optional = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"], optional = true }
open = { version = "5.3.5", optional = true }
# Compiled glob matchers for `--name` filters. `GlobSet` lets us test a
# filename against several patterns in one walk-step without rebuilding
# the matcher per entry.
globset = "0.4.18"
# TOON (Token-Oriented Object Notation) encoder for the `--toon` output.
# Default features pull in a full CLI/TUI (clap, ratatui, image, syntect,
# ...) we don't need — `default-features = false` keeps just the library
# + its serde integration.
toon-format = { version = "0.5.0", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[dev-dependencies]
assert_cmd = "2.2.2"
http-body-util = "0.1.3"
insta = { version = "1.48.0", features = ["filters"] }
predicates = "3.1.4"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
